Add content to homepage

--- a/index.html
+++ b/index.html
@@ -3,153 +3,56 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
-    <title>FlexPractice</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <title>G & P Album Art Exchange</title>
   </head>
   <body>
+    <div class="header">
+      <div class="main-header">
+        <h1>album<span>art</span>exchange</h1>
+        <input type="search" name="name" value="Search">
+        <input type="button" name="name" value="go">
+      </div>
+      <div class="nav">
+        <a href="#">gallery</a>
+        <a href="#">forums</a>
+        <a href="#">blog</a>
+        <a href="#">about</a>
+        <a href="#">artists</a>
+        <a href="#">requests</a>
 
-    <nav class="product-filter">
+        <a href="#"><i class="fa fa-youtube-play"></i></a>
+        <a href="#"><i class="fa fa-facebook-square"></i></a>
+        <a href="#"><i class="fa fa-twitter-square"></i></a>
+      </div>
+    </div><!-- end header -->
 
-  <h1>Jackets</h1>
 
-  <div class="sort">
+    <div class="summary">
 
-    <div class="collection-sort">
-      <label>Filter by:</label>
-      <select>
-        <option value="/">All Jackets</option>
-      </select>
     </div>
+    <div class="gallery">
 
-    <div class="collection-sort">
-      <label>Sort by:</label>
-      <select>
-        <option value="/">Featured</option>
-      </select>
-    </div>
+      <div class="cover">
+        <img src="img/blink.jpg" alt="" />
 
-  </div>
+      </div>
+      <div class="cover">
+        <img src="img/buffy.jpg" alt="" />
 
-</nav>
+      </div>
+      <div class="cover">
+        <img src="img/beachboys.jpg" alt="" />
 
-<section class="products">
+      </div>
+      <div class="cover">
+        <img src="img/alice.jpg" alt="" />
 
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
+      </div>
+    </div><!-- end gallery -->
 
-  <!-- more products -->
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
+    <div class="footer">
 
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="img/coat-01.jpeg">
-    </div>
-    <div class="product-info">
-      <h5>Winter Jacket</h5>
-      <h6>$99.99</h6>
-    </div>
-  </div>
-
-
-
-
-
-
-
-</section>
-
-
-
-
-
-
+    </div><!-- end footer -->
   </body>
 </html>
