Style hover on albums

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="sass-boiler-plate/stylesheets/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,900|Poiret+One' rel='stylesheet' type='text/css'>
     <title>G & P Album Art Exchange</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
 
       </div>
       <div class="nav positioner">
-        <a href="#">gallery</a>
+        <a href="gallery.html">gallery</a>
         <a href="#">forums</a>
         <a href="#">blog</a>
         <a href="#">about</a>
@@ -31,31 +32,34 @@
     </div><!-- end header -->
 
 
-    <div class="summary positioner">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
-      </p>
+    <div class="main-wrapper positioner">
+      <div class="gallery">
 
+        <div class="cover">
+          <img src="img/blink.jpg" alt="" />
+
+        </div>
+        <div class="cover">
+          <img src="img/buffy.jpg" alt="" />
+
+        </div>
+        <div class="cover">
+          <img src="img/beachboys.jpg" alt="" />
+
+        </div>
+        <div class="cover">
+          <img src="img/alice.jpg" alt="" />
+
+        </div>
+      </div><!-- end gallery -->
+
+      <div class="summary">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+        </p>
+      </div>
     </div>
-    <div class="gallery positioner">
 
-      <div class="cover">
-        <img src="img/blink.jpg" alt="" />
-
-      </div>
-      <div class="cover">
-        <img src="img/buffy.jpg" alt="" />
-
-      </div>
-      <div class="cover">
-        <img src="img/beachboys.jpg" alt="" />
-
-      </div>
-      <div class="cover">
-        <img src="img/alice.jpg" alt="" />
-
-      </div>
-    </div><!-- end gallery -->
 
     <div class="footer positioner">
 
