add hover details to homepage

--- a/index.html
+++ b/index.html
@@ -35,27 +35,42 @@
     <div class="main-wrapper positioner">
       <div class="gallery">
 
-        <div class="cover">
-          <img src="img/blink.jpg" alt="" />
-
+        <div class="cover blink">
+          <div class="album">
+            <h3>album title</h3>
+            <p>album info here</p>
+            <a href="#">link to stuff</a>
+          </div>
         </div>
-        <div class="cover">
-          <img src="img/buffy.jpg" alt="" />
-
+        <div class="cover buffy">
+          <div class="album">
+            <h3>album title</h3>
+            <p>album info here</p>
+            <a href="#">link to stuff</a>
+          </div>
         </div>
-        <div class="cover">
-          <img src="img/beachboys.jpg" alt="" />
-
+        <div class="cover alice">
+          <div class="album">
+            <h3>album title</h3>
+            <p>album info here</p>
+            <a href="#">link to stuff</a>
+          </div>
         </div>
-        <div class="cover">
-          <img src="img/alice.jpg" alt="" />
-
+        <div class="cover beachboys">
+          <div class="album">
+            <h3>album title</h3>
+            <p>album info here</p>
+            <a href="#">link to stuff</a>
+          </div>
         </div>
       </div><!-- end gallery -->
 
       <div class="summary">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+          Dedicated to collecting and sharing meticulously scanned and edited album cover art,
+          for those of us who are ridiculously obsessive about such things.
+
+
         </p>
       </div>
     </div>
